# docs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 2-BUG-REPORT.yaml
.github/workflows/: .tests-matrix.yaml  tests.yaml
tests/: test_something.py
